manuscripts/elife-41627/v1/manuscript.md
# Single cell RNA-seq identifies the origins of heterogeneity in efficient cell transdifferentiation and reprogramming

## Authors

- Mirko Francesconi<sup>1</sup>
- Bruno Di Stefano<sup>2</sup> ([ORCID: 0000-0003-2532-3087](https://orcid.org/0000-0003-2532-3087))
- Clara Berenguer<sup>3</sup>
- Luisa de Andrés-Aguayo<sup>3</sup>
- Marcos Plana-Carmona<sup>3</sup> ([ORCID: 0000-0002-1976-7506](https://orcid.org/0000-0002-1976-7506))
- Maria Mendez-Lago<sup>4</sup>
- Amy Guillaumet-Adkins<sup>4</sup>
- Gustavo Rodriguez-Esteban<sup>5</sup>
- Marta Gut<sup>6</sup>
- Ivo G Gut<sup>6</sup> ([ORCID: 0000-0001-7219-632X](https://orcid.org/0000-0001-7219-632X))
- Holger Heyn<sup>6</sup>
- Ben Lehner<sup>1</sup> ([ORCID: 0000-0002-8817-1124](https://orcid.org/0000-0002-8817-1124)) †
- Thomas Graf<sup>3</sup> ([ORCID: 0000-0003-2774-4117](https://orcid.org/0000-0003-2774-4117)) †

### Affiliations

1. Systems Biology Program Center for Genomic Regulation Barcelona Spain
2. Department of Stem Cell and Regenerative Biology Harvard University Boston United States
3. Gene Regulation, Stem Cells and Cancer Program Center for Genomic Regulation Barcelona Spain
4. Centre for Genomic Regulation Centro Nacional de Análisis Genómico Barcelona Spain
5. Center for Genomic Regulation Centro Nacional de Análisis Genómico Barcelona Spain
6. Center for Genomic Regulation Centro Nacional d'Anàlisi Genòmica Barcelona Spain

† Corresponding author

## Abstract

Forced transcription factor expression can transdifferentiate somatic cells into other specialized cell types or reprogram them into induced pluripotent stem cells (iPSCs) with variable efficiency. To better understand the heterogeneity of these processes, we used single-cell RNA sequencing to follow the transdifferentation of murine pre-B cells into macrophages as well as their reprogramming into iPSCs. Even in these highly efficient systems, there was substantial variation in the speed and path of fate conversion. We predicted and validated that these differences are inversely coupled and arise in the starting cell population, with Myc high large pre-BII cells transdifferentiating slowly but reprogramming efficiently and Myc low small pre-BII cells transdifferentiating rapidly but failing to reprogram. Strikingly, differences in Myc activity predict the efficiency of reprogramming across a wide range of somatic cell types. These results illustrate how single cell expression and computational analyses can identify the origins of heterogeneity in cell fate conversion processes.
